Degree Distribution plot

--- a/Community Finding.ipynb
+++ b/Community Finding.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,19 +22,39 @@
     "import infomap\n",
     "from collections import defaultdict\n",
     "import matplotlib.pyplot as plt\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import numpy as np\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph with 1005 nodes and 16706 edges\n"
+      "Figures\n"
+     ]
+    }
+   ],
+   "source": [
+    "figurePath = Path(\"Figures\")\n",
+    "print(figurePath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph named 'emailNet' with 1005 nodes and 16706 edges\n"
      ]
     }
    ],
@@ -46,6 +66,7 @@
     "    #print(emailRaw)\n",
     "    emailNetwork = nx.from_pandas_edgelist(emailRaw, source='Source', target='Target', edge_attr=None)\n",
     "    #nx.draw(emailNetwork)  \n",
+    "    emailNetwork.name = fileName.split(\".\")[0]\n",
     "    return emailNetwork\n",
     "emailNet = datafileToGraph('emailNet.txt')\n",
     "print(emailNet)"
@@ -67,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -132,8 +153,25 @@
     "for C in (emailNet.subgraph(c) for c in nx.connected_components(emailNet)):\n",
     "    print(\"Average Path Length:\", nx.average_shortest_path_length(C))\n",
     "    break\n",
-    "    \n",
-    "#centrality"
+    "\n",
+    "\n",
+    "\n",
+    "#centrality\n",
+    "#plot deggre centrality\n",
+    "fig = plt.figure(figsize=(3*1.61803398875, 3))\n",
+    "ax = plt.axes((0.2, 0.2, 0.70, 0.70), facecolor='w')\n",
+    "d = np.array(nx.degree_histogram(emailNet))\n",
+    "y = d / len(emailNet.nodes)\n",
+    "x = np.arange(len(y))\n",
+    "ax.plot(x,y,\"go\")\n",
+    "ax.set_xlabel(\"k\")\n",
+    "ax.set_ylabel(\"Pk\")\n",
+    "ax.set_yscale('log')\n",
+    "ax.set_xscale('log')\n",
+    "ax.set_title(\"Degree distribution\")\n",
+    "#ax.legend()\n",
+    "fig.savefig(figurePath/(\"DegreeDistribution_%s.png\" % (emailNet.name)))\n",
+    "plt.close(fig)\n"
    ]
   },
   {
