--- a/Community Finding.ipynb
+++ b/Community Finding.ipynb
@@ -47,34 +47,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Graph named 'emailNet' with 1005 nodes and 16706 edges\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def datafileToGraph(fileName):\n",
-    "    emailRaw = pd.read_csv(fileName, header=None)\n",
-    "    emailRaw = emailRaw[0].str.split(n=2, expand=True)\n",
-    "    emailRaw.columns = ['Source', 'Target']\n",
+    "    raw = pd.read_csv(fileName, header=None)\n",
+    "    raw = raw[0].str.split(n=2, expand=True)\n",
+    "    raw.columns = ['Source', 'Target']\n",
     "    #print(emailRaw)\n",
-    "    emailNetwork = nx.from_pandas_edgelist(emailRaw, source='Source', target='Target', edge_attr=None)\n",
+    "    network = nx.from_pandas_edgelist(raw, source='Source', target='Target', edge_attr=None)\n",
     "    #nx.draw(emailNetwork)  \n",
-    "    emailNetwork.name = fileName.split(\".\")[0]\n",
-    "    return emailNetwork\n",
-    "emailNet = datafileToGraph('emailNet.txt')\n",
-    "print(emailNet)"
+    "    network.name = fileName.split(\".\")[0]\n",
+    "    return network"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,6 +110,31 @@
     "    return NodeClustering(\n",
     "        coms_infomap, g_original, \"Infomap\", method_parameters={\"flags\": flags}\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Email network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph named 'emailNet' with 1005 nodes and 16706 edges\n"
+     ]
+    }
+   ],
+   "source": [
+    "emailNet = datafileToGraph('emailNet.txt')\n",
+    "print(emailNet)"
    ]
   },
   {
@@ -567,6 +582,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## DBLP network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph named 'dblpNet' with 317080 nodes and 1049866 edges\n"
+     ]
+    }
+   ],
+   "source": [
+    "dblpNet = datafileToGraph('dblpNet.txt')\n",
+    "print(dblpNet)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## LFR "
    ]
   },
@@ -835,22 +875,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "α\n",
-      "μ\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -873,7 +897,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
