--- a/Community Finding.ipynb
+++ b/Community Finding.ipynb
@@ -189,26 +189,6 @@
     }
    ],
    "source": [
-    "def convertDblpLabelsToCSV(txtFile, csvFile):\n",
-    "    txtFile = open(txtFile, 'r')\n",
-    "    \n",
-    "    txtLines = txtFile.readlines()\n",
-    "    csvLines = {}\n",
-    "    \n",
-    "    for line in txtLines:\n",
-    "        lineVec = line[:-1].split(' ')\n",
-    "        print(lineVec)\n",
-    "        if lineVec[1] in csvLines.keys():\n",
-    "            csvLines[lineVec[1]].append(lineVec[0])\n",
-    "        else:\n",
-    "            csvLines[lineVec[1]] = [lineVec[0]]\n",
-    "            \n",
-    "    with open(csvFile, 'w',newline=\"\") as csv_file:  \n",
-    "        writer = csv.writer(csv_file)\n",
-    "        for key, value in csvLines.items():\n",
-    "            writer.writerow(value)\n",
-    "\n",
-    "#convertDblpLabelsToCSV(\"dblpLabels.txt\", \"dblpLabels.csv\")\n",
     "dblpLabels = readwrite.read_community_csv(\"dblpLabels.txt\", \"\\t\", str)\n",
     "print(list(dblpLabels.to_node_community_map().values())[-1][0])"
    ]
@@ -269,6 +249,43 @@
     "    ax.set_title(\"Girvan-Newman Modularity Email\")\n",
     "    ax.legend()\n",
     "    fig.savefig(figurePath/(\"Girvan-Newman_mod_%s.png\" % (network.name)))\n",
+    "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bestInfomap(network, trials):\n",
+    "    print(network.name)\n",
+    "    modularity_vals = []\n",
+    "    bestGNscore = 0\n",
+    "    bestGNcut = 0\n",
+    "    Flags = \"--silent -N \"\n",
+    "    for t in tqdm(trials):\n",
+    "        Flags += str(t)\n",
+    "        networkInfomap = algorithms.infomap(emailNet, Flags)\n",
+    "        a = evaluation.newman_girvan_modularity(network, networkInfomap)\n",
+    "        if a.score > bestGNscore:\n",
+    "            bestGNscore = a.score\n",
+    "            bestGNtrial = t\n",
+    "        modularity_vals.append(a.score)\n",
+    "\n",
+    "    print(\"best modularity with %d is: %f\" % (bestGNtrial, bestGNscore))\n",
+    "\n",
+    "    fig = plt.figure(figsize=(3*1.61803398875, 3))\n",
+    "    ax = plt.axes((0.2, 0.2, 0.70, 0.70), facecolor='w')\n",
+    "\n",
+    "    ax.plot(levels, modularity_vals, \"-ro\")\n",
+    "\n",
+    "    ax.set_xlabel(\"Trials\")\n",
+    "    ax.set_ylabel(\"Modularity\")\n",
+    "    plt.xticks(levels)\n",
+    "    ax.set_title(\"Infomap Modularity Email\")\n",
+    "    ax.legend()\n",
+    "    fig.savefig(figurePath/(\"Infomap_mod_%s.png\" % (network.name)))\n",
     "    plt.close(fig)"
    ]
   },
@@ -642,7 +659,7 @@
     "louvainMod = evaluation.newman_girvan_modularity(emailNet, emailLouvain)\n",
     "leidenMod = evaluation.newman_girvan_modularity(emailNet, emailLeiden)\n",
     "gnMod = evaluation.newman_girvan_modularity(emailNet, emailGN)\n",
-    "infomapMod = evaluation.newman_girvan_modularity(emailNet, emailLeiden)\n",
+    "infomapMod = evaluation.newman_girvan_modularity(emailNet, EmailInfomap)\n",
     "\n",
     "print(\"Louvain modularity:\", louvainMod)\n",
     "print(\"Leiden modularity:\", leidenMod)\n",
@@ -801,23 +818,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "dblpLabels = readwrite.read_community_csv(\"dblpLabelsComplete.txt\", \"\\t\", str)\n",
+    "print(len(list(dblpLabels.to_node_community_map().keys())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "algs = [\"louvain\", \"leiden\", \"infomap\"]\n",
+    "timeArray = []\n",
+    "\n",
+    "start_time = time.time()\n",
+    "dblpLouvain = algorithms.louvain(dblpNet)\n",
+    "dataToJSON(dblpLouvain, 'dblp_louvain.data')\n",
+    "t = time.time() - start_time\n",
+    "print(\"Execution time for Louvain in email net: %.6s seconds\" % (t))\n",
+    "timeArray.append(round(t,6))\n",
+    "\n",
+    "start_time = time.time()\n",
+    "dblpLeiden = algorithms.leiden(dblpNet)\n",
+    "dataToJSON(dblpLeiden, 'dblp_leiden.data')\n",
+    "t = time.time() - start_time\n",
+    "print(\"Execution time for Leiden in email net: %.6s seconds\" % (t))\n",
+    "timeArray.append(round(t,6))\n",
+    "\n",
+    "\"\"\"\n",
+    "start_time = time.time()\n",
+    "dblpGN = algorithms.girvan_newman(dblpNet, level=3)\n",
+    "dataToJSON(dblpGN, 'dblp_gn.data')\n",
+    "t = time.time() - start_time\n",
+    "print(\"Execution time for Girvan-Newman in email net: %.6s seconds\" % (t))\n",
+    "timeArray.append(round(t,6))\n",
+    "\"\"\"\n",
+    "\n",
+    "start_time = time.time()\n",
+    "dblpInfomap = algorithms.infomap(dblpNet, \"--silent -N 2\")\n",
+    "dataToJSON(dblpInfomap, 'dblp_infomap.data')\n",
+    "t = time.time() - start_time\n",
+    "print(\"Execution time for Infomap in email net: %.6s seconds\" % (t))\n",
+    "timeArray.append(round(t,6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dblpLouvain = JSONtoData(\"dblp_louvain.data\")\n",
+    "dblpLeiden = JSONtoData(\"dblp_leiden.data\")\n",
+    "dblpInfomap = JSONtoData(\"dblp_infomap.data\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Accuracy "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time for Leiden in email net: 10.429 seconds\n"
+      "NMI for Louvain and labels: MatchingResult(score=0.5882969131854163, std=None)\n",
+      "NMI for Leiden and labels: MatchingResult(score=0.5776771281141226, std=None)\n",
+      "NMI for Girvan-Newman and labels: MatchingResult(score=0.0449480988954229, std=None)\n",
+      "\n",
+      "AMI for Louvain and labels: MatchingResult(score=0.5527517337989198, std=None)\n",
+      "AMI for Leiden and labels: MatchingResult(score=0.540992332601562, std=None)\n",
+      "AMI for Girvan-Newman and labels: MatchingResult(score=-0.0005067215292382119, std=None)\n",
+      "\n",
+      "ARI for Louvain and labels: MatchingResult(score=0.3311391803457487, std=None)\n",
+      "ARI for Leiden and labels: MatchingResult(score=0.2985758824644375, std=None)\n",
+      "NMI for Girvan-Newman and labels: MatchingResult(score=-0.0012481583268392242, std=None)\n",
+      "\n",
+      "F1 for Louvain and labels: MatchingResult(score=0.21592592592592594, std=0.2803999690819878)\n",
+      "F1 for Leiden and labels: MatchingResult(score=0.2082142857142857, std=0.27508509815053567)\n",
+      "F1 for Girvan-Newman and labels: MatchingResult(score=0.05695652173913045, std=0.050599431394699676)\n",
+      "\n",
+      "VOI for Louvain and labels: MatchingResult(score=3.2163956901538038, std=None)\n",
+      "VOI for Leiden and labels: MatchingResult(score=3.245985910498302, std=None)\n",
+      "VOI for Girvan-Newman and labels: MatchingResult(score=4.848380933791979, std=None)\n"
      ]
     }
    ],
    "source": [
-    "start_time = time.time()\n",
-    "dblpLeiden = algorithms.leiden(dblpNet)\n",
-    "dataToJSON(dblpLeiden, 'dblp_leiden.data')\n",
-    "t = time.time() - start_time\n",
-    "print(\"Execution time for Leiden in email net: %.6s seconds\" % (t))"
+    "nmiLouvainLabels = dblpLouvain.normalized_mutual_information(dblpLabels)\n",
+    "nmiLeidenLabels = dblpLeiden.normalized_mutual_information(dblpLabels)\n",
+    "#nmiGirvanNewmanLabels = emailGN.normalized_mutual_information(emailLabels)\n",
+    "nmiInfomapLabels = dblpInfomap.normalized_mutual_information(dblpLabels)\n",
+    "\n",
+    "print(\"NMI for Louvain and labels:\", nmiLouvainLabels)\n",
+    "print(\"NMI for Leiden and labels:\", nmiLeidenLabels)\n",
+    "#print(\"NMI for Girvan-Newman and labels:\", nmiGirvanNewmanLabels)\n",
+    "print(\"NMI for Infomap and labels:\", nmiInfomapLabels)"
    ]
   },
   {
@@ -829,21 +938,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Leiden modularity: FitnessResult(min=None, max=None, score=0.8318275670531278, std=None)\n"
+      "Louvain Girvan-Newman mod: FitnessResult(min=None, max=None, score=0.4318206751448841, std=None)\n",
+      "Louvain Erdos-Renyi mod: FitnessResult(min=None, max=None, score=0.4549865127361685, std=None)\n",
+      "Louvain Z-mod: FitnessResult(min=None, max=None, score=1.1462260420651909, std=None)\n",
+      "gn Girvan-Newman mod: FitnessResult(min=None, max=None, score=0.0031087073868774446, std=None)\n"
      ]
     }
    ],
    "source": [
-    "leidenMod2 = evaluation.newman_girvan_modularity(dblpNet, dblpLeiden)\n",
+    "louvainModD = evaluation.newman_girvan_modularity(dblpNet, dblpLouvain)\n",
+    "leidenModD = evaluation.newman_girvan_modularity(dblpNet, dblpLeiden)\n",
+    "#gnMod = evaluation.newman_girvan_modularity(emailNet, emailGN)\n",
+    "infomapModD = evaluation.newman_girvan_modularity(dblpNet, dblpInfomap)\n",
     "\n",
-    "print(\"Leiden modularity:\", leidenMod2)"
+    "print(\"Louvain modularity:\", louvainModD)\n",
+    "print(\"Leiden modularity:\", leidenModD)\n",
+    "#print(\"Girvan-Newman modularity:\", gnMod)\n",
+    "print(\"Infomap modularity:\", infomapModD)"
    ]
   },
   {
@@ -1272,7 +1390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
